Update Animator with basic movements.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2AFCB78C4F555E543D7135BF2F0151C5
-ProjectName=Third Person BP Game Template
+ProjectName=Project Survivor
+ProjectVersion=0.0.1
+Description=Resident Evil Survivor UE4 Remake
+
